<resources>
    //Affichage about us
    <string name="app_name">MBDS News</string>
    <string name="members">Membres du groupe</string>
    <string name="about_us_toolbar_name">À propos de nous</string>
    <string name="repo_link">Repo du projet</string>
    <string name="github_link">https://github.com/n-tamanini/Projet_Newsletter_MOMAS_FOURNIER_TAMANINI</string>
    <string name="external_libraries">Librairies externes</string>
    <string name="features">Fonctionnalités implémentées</string>
    <string name="toolbar_name">Liste des articles</string>
    <string name="article_name">Article</string>

    //Affichage de l'article
    <string name="toolbar_name_list_articles">Liste des articles</string>
    <string name="source_article">En savoir plus : </string>
    <string name="author_article">Réalisé par : </string>
    <string name="date_article">Daté du : </string>

    //Filtres
    <string-array name="country_arrays_pretty">
        <item>France</item>
        <item>Belgique</item>
        <item>Suisse</item>
        <item>Royaume-Uni</item>
        <item>Etats-Unis</item>
        <item>Allemagne</item>
        <item>Italie</item>
        <item>Russie</item>
        <item>Canada</item>
    </string-array>

    <string-array name="country_arrays">
        <item>fr</item>
        <item>be</item>
        <item>ch</item>
        <item>gb</item>
        <item>us</item>
        <item>de</item>
        <item>it</item>
        <item>ru</item>
        <item>ca</item>
    </string-array>

    <string-array name="category_arrays_pretty">
        <item>Toutes</item>
        <item>Divertissement</item>
        <item>Sport</item>
        <item>Science</item>
        <item>Technologie</item>
        <item>Santé</item>
    </string-array>

    <string-array name="category_arrays">
        <item>general</item>
        <item>entertainment</item>
        <item>sports</item>
        <item>science</item>
        <item>technology</item>
        <item>health</item>
    </string-array>

    //Page d'acceuil
    <string name="toolbar_name_page_accueil">Accueil</string>
    <string name="find_articles">Rechercher des articles</string>
    <string name="select_country">Sélectionnez un pays</string>
    <string name="select_category">Sélectionnez une catégorie</string>
    <string name="added_to_favorites">Article ajouté dans les favoris</string>
    <string name="removed_from_favorites">Article retiré des favoris</string>

    //Page favoris
    <string name="toolbar_name_list_favorite_articles">Favoris</string>
    <string name="wantToDeleteFavoriteArticle">Voulez-vous vraiment supprimer cet article de la liste de vos favoris ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
</resources>