<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/members"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/list_view_members"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:divider="@null" />

        <TextView
            android:id="@+id/repo_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/repo_link"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_view_members" />

        <TextView
            android:id="@+id/github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autoLink="web"
            android:text="@string/github_link" />

        <TextView
            android:id="@+id/external_libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/external_libraries"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/list_view_libraries"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_margin="10dp"
            android:divider="@null" />

        <TextView
            android:id="@+id/features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/design_default_color_primary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/features"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ListView
            android:id="@+id/list_view_features"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_margin="10dp"
            android:divider="@null" />

    </LinearLayout>

</ScrollView>